--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next": "13.0.0",
     "nprogress": "0.2.0",
     "payment": "2.4.6",
+    "primereact": "^10.8.2",
     "prismjs": "1.29.0",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
