--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "recharts": "2.1.16",
     "stylis": "4.1.3",
     "stylis-plugin-rtl": "2.1.1",
+    "xlsx": "^0.18.5",
     "yup": "0.32.11"
   },
   "devDependencies": {
