--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "i18next": "22.0.4",
     "i18next-browser-languagedetector": "7.0.0",
     "i18next-http-backend": "2.0.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^4.0.0",
     "keen-slider": "6.8.3",
     "moment": "^2.30.1",
     "next": "13.0.0",
