--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-redux": "8.0.4",
+    "react-window": "^1.8.10",
     "recharts": "2.1.16",
     "stylis": "4.1.3",
     "stylis-plugin-rtl": "2.1.1",
@@ -84,6 +85,7 @@
     "@iconify/tools": "2.1.1",
     "@iconify/types": "2.0.0",
     "@iconify/utils": "2.0.1",
+    "@types/react-window": "^1.8.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "8.5.0",
