--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --https",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -36,7 +36,7 @@
     "@popperjs/core": "2.11.6",
     "@reduxjs/toolkit": "1.8.6",
     "apexcharts-clevision": "3.28.5",
-    "axios": "1.1.3",
+    "axios": "^1.1.3",
     "axios-mock-adapter": "1.21.2",
     "babel-eslint": "10.1.0",
     "chart.js": "3.9.1",
@@ -46,6 +46,8 @@
     "date-fns": "2.29.3",
     "draft-js": "0.11.7",
     "firebase": "9.13.0",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "i18next": "22.0.4",
     "i18next-browser-languagedetector": "7.0.0",
     "i18next-http-backend": "2.0.0",
