--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cleave.js": "1.6.0",
     "clipboard-copy": "4.0.1",
     "clsx": "1.2.1",
+    "cookie": "^1.0.1",
     "date-fns": "2.29.3",
     "draft-js": "0.11.7",
     "firebase": "9.13.0",
@@ -51,6 +52,7 @@
     "i18next": "22.0.4",
     "i18next-browser-languagedetector": "7.0.0",
     "i18next-http-backend": "2.0.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^4.0.0",
     "keen-slider": "6.8.3",
